# newcity-public

./: .gitignore  .gitmodules  CMakeLists.txt  CMakeSettings.json  README.md  Toolchain-mingw32.cmake  buildspec.yml  buildspec_msvc.yml  depot_build_newcity.vdf  newcity_build.vdf  setup_version.sh  upload_to_steam.sh
.github/workflows/: cmake-workflow.yml
lib/: StackWalker.lib
src/: .valgrind-suppressions  activity.cpp  amenity.cpp  amenity.hpp  arch.sh  blueprint.cpp  blueprint.hpp  blueprints.txt.arc  blueprints.txt.arc2  board.cpp  board.hpp  box.cpp  box.hpp  business.cpp  business.hpp  cd_and_build.sh  chroot_and_build.sh  city.cpp  city.hpp  collect-s3.sh  collisionTable.cpp  collisionTable.hpp  color.cpp  color.hpp  compass.cpp  compass.hpp  configuration.cpp  configuration.hpp  cpool.hpp  cup.hpp  debug.sh  detailed-leaks.md  economy.cpp  economy.hpp  error.cpp  error.hpp  eula.txt  fast.sh  fix-cmake.sh  gdb_script  (+129 more)
src/building/: building.cpp  building.hpp  buildingCallbacks.cpp  buildingCallbacks.hpp  buildingTexture.cpp  buildingTexture.hpp  deco.cpp  deco.hpp  decoData.v54.renum  design.cpp  design.hpp  designOrganizer.cpp  designOrganizer.hpp  designPackage.cpp  designPackage.hpp  renderBuilding.cpp  renderBuilding.hpp  statue.cpp  statue.hpp
src/console/: conCallbacks.cpp  conCallbacks.hpp  conCmd.cpp  conCmd.hpp  conDisplay.cpp  conDisplay.hpp  conInput.cpp  conInput.hpp  conMod.cpp  conMod.hpp
src/contributors/: apartment-complex.txt  factory.txt  house.txt  office-complex.txt  skyscraper.txt
src/data/: achievements.lua  constants.lua  decos.lua  decos.lua.bak  easy.lua  graph.lua  hard.lua  scripts.lua  statues.lua  terrain.lua  v3.lua  vehicles.lua  veryhard.lua  wanderer-movement.lua  wanderers.lua
src/designs/: G11x9_park_grand.design  G11x9_zoo.design  G14x17_public_beach.design  G2x1_tennis_court.design  G2x3_mayoral_mansion.design  G2x3_park_small.design  G3x2_theater.design  G3x3_memorial.design  G3x3_pavilion.design  G4x3_ice_rink.design  G4x5_city_hall.design  G4x6_nature_museum.design  G4x9_courthouse.design  G4x9_park_big.design  G6x14_pier_amusement_park.design  G6x14_pier_amusement_park_showcase.design
src/docs/: 404.md  building-textures.md  index.md  indexOLD.md  level-of-detail.md  link.md  palette.md  park-lots.md  test.md  tourism.md
src/draw/: buffer.cpp  buffer.hpp  camera.cpp  camera.hpp  cull.hpp  culler.cpp  culler.hpp  drawCallbacks.cpp  drawCallbacks.hpp  entity.cpp  entity.hpp  framebuffer.cpp  framebuffer.hpp  image.cpp  image.hpp  mesh.cpp  mesh.hpp  shader.cpp  shader.hpp  stb_include.h  texture.cpp  texture.hpp
src/game/: achievement.cpp  achievement.hpp  achievements.v55.renum  autosave.cpp  constants.cpp  constants.hpp  constantsList.hpp  feature.cpp  feature.hpp  game.cpp  game.hpp  task.cpp  task.hpp  taskRunners.cpp  tasksEnum.hpp  test.cpp  update.cpp  update.hpp  version.cpp  version.hpp  version_generated.hpp
src/graph/: config.cpp  config.hpp  graphParent.cpp  graphParent.hpp  render.cpp  stop.cpp  stop.hpp  transit.cpp  transit.hpp  transitRouter.cpp  transitRouter.hpp  transitText.hpp
src/import/: OBJ_Loader.hpp  import_system.hpp  mesh-import.cpp  mesh-import.hpp  obj.cpp  obj.hpp
src/newspaper/: 404.md  IndustryFactories.md  article.cpp  article.hpp  articleTransform.cpp  articles.lua  astronauts-selected.md  astronauts-snubbed.md  balloons.md  baseball01.md  baseball02.md  baseball03.md  baseball04.md  beautiful-city01.md  big-news-day.md  boss_joe_again.md  chef-snubs.md  cooler1.md  corruption01.md  corruption02.md  corruption03.md  crime01.md  crime02.md  crime03.md  crime04.md  derail01.md  econdet-down01.md  econdet-up01.md  economy02.md  education01.md  education02.md  factory-fire01.md  farms-empty01.md  foreign-food01.md  forest-fire01.md  friendly-city01.md  full-employment-national01.md  full-employment01.md  growth01.md  growth02.md  (+47 more)
src/notes/: econ.md  newspaper.md
src/parts/: aboutPanel.cpp  aboutPanel.hpp  amenityInfo.cpp  amenityInfo.hpp  article.cpp  article.hpp  blank.cpp  blank.hpp  block.cpp  block.hpp  blueprintPanel.cpp  blueprintPanel.hpp  blueprintsList.cpp  blueprintsList.hpp  budgetPanel.cpp  budgetPanel.hpp  buildingPanel.cpp  button.cpp  button.hpp  changelogData.hpp  changelogPanel.cpp  changelogPanel.hpp  chart.cpp  chart.hpp  citipediaPanel.cpp  citipediaPanel.hpp  colorPicker.cpp  colorPicker.hpp  console.cpp  console.hpp  designConfigPanel.cpp  designConfigPanel.hpp  designOrganizerPanel.cpp  designOrganizerPanel.hpp  dropdown.cpp  dropdown.hpp  economyPanel.cpp  economyPanel.hpp  error.cpp  error.hpp  (+65 more)
src/platform/: binaryfilebuilder.cpp  binaryfilebuilder.hpp  binaryfilereader.cpp  binaryfilereader.hpp  binaryfileshared.hpp  event.cpp  event.hpp  eventsEnum.hpp  fcaseopen.cpp  fcaseopen.hpp  file.cpp  file.hpp  lookup.cpp  lookup.hpp  lua.cpp  lua.hpp  luaCallbacks.cpp  mod.cpp  mod.hpp
src/route/: broker.cpp  broker.hpp  cache.hpp  heap.cpp  heap.hpp  location.cpp  location.hpp  route.cpp  route.hpp  routeRequest.cpp  routeRequest.hpp  router.cpp  router.hpp  testRouting.cpp
src/shaders/: building.fragment.shader  building.vertex.shader  deco.fragment.shader  global.fragment.shader  global.shader  header.fragment.shader  headerInstanced.vertex.shader  headerShared.vertex.shader  headerSingle.vertex.shader  headerTree.vertex.shader  heatmap.fragment.shader  instanced.vertex.shader  land.fragment.shader  land.vertex.shader  lighting.fragment.shader  lighting.vertex.shader  lot.fragment.shader  main.fragment.shader  main.vertex.shader  rain.fragment.shader  rain.vertex.shader  ripple.shader  road.fragment.shader  shadow.fragment.shader  shadow.vertex.shader  shadowHeader.fragment.shader  shadowInstanced.vertex.shader  shadowSingle.vertex.shader  shadowText.fragment.shader  shadowText.vertex.shader  shadowTree.fragment.shader  shadowTree.vertex.shader  shine.fragment.shader  sign.fragment.shader  sign.vertex.shader  single.fragment.shader  single.vertex.shader  skybox.fragment.shader  skybox.vertex.shader  text.fragment.shader  (+29 more)
src/sound/: Click Cancel.mscz  (+6 more)
(+887 files in other folders)
